--- a/src/docs/getting-started/contribution.mdx
+++ b/src/docs/getting-started/contribution.mdx
@@ -6,10 +6,10 @@ order: 7
 <p className="lead">First of all, thank you for considering contributing to Spruce. We appreciate your time and effort in making this CSS system better. We want to make contributing to this project as easy and transparent as possible, whether it's:</p>
 
 - reporting a bug.
-- discussing the current state of the code.
-- submitting a fix.
-- proposing new features.
-- becoming a maintainer.
+- Discuss the current state of the code.
+- Submitting a fix.
+- Proposing new features.
+- Becoming a maintainer.
 
 Following these guidelines helps communicate that you respect the developers' time managing and developing this open-source project. In return, they should reciprocate that respect in addressing your issue, assessing changes, and helping you finalize your pull requests.
 
