Update Appendix page

--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -3,11 +3,17 @@ title: 'Appendix'
 order: 8
 ---
 
-<p class="lead">In the appendix you can find some reference that inspired or gave any kind of input related to any aspects of Spruce</p>
+<p class="lead">In the appendix, you can find some references that inspired or gave any input related to any aspects of Spruce CSS or our learning in general.</p>
 
-Creating a framework is a complex task, you need a lot of input. You usually don't invent the wheel, you use the old ideas in a new form. So here is a lot of good resource if you want to know more, it helped a lot for us.
+Creating a framework is a complex task; you need a lot of input. You usually don't invent the wheel; you use the old ideas in a new form. You try to sum up your knowledge in an acceptable format.
 
-- [Bootstrap](https://getbootstrap.com/) - It may look strange that we reference Bootstrap here because it a (maybe the biggest) CSS framework. The case is, that BS is almost the ultimate truth when it comes to excellent solutions. It a a high standard for us.
-- [Layout patterns](https://web.dev/patterns/layout/) - A good source of modern layout examples. Spruce don't use a grid system and we don't plan to implement one. We use Flexbox and Grid.
-- [Learn Responsive Design](https://web.dev/learn/design/) - A great resource for modern responsive development. We loved the "Internationalization" section.
-- [Every Layout](https://every-layout.dev/) - A great course on layouts. How to create resopnsive layouts without ```@media``` breakpoints. Although Spruce uses breakpoint we try to reduce their uses as possible.
+Learning modern CSS can be rewarding. So here are a lot of good resources if you want to know more about the concept and techniques that might include in Spruce.
+
+- [Bootstrap](https://getbootstrap.com/) - It is the most popular CSS framework. The case is that BS is almost the ultimate truth regarding excellent solutions. Reading its documentation and source code is a good learning exercise.
+- [Layout patterns](https://web.dev/patterns/layout/) - A good source of modern layout examples. Spruce CSS doesn’t use a grid system, and we don’t plan to implement one. We use Flexbox, Grid, and some predefined mixin helpers.
+- [Learn Responsive Design](https://web.dev/learn/design/) - A great resource for modern responsive development. We loved the “Internationalization” section.
+- [Every Layout](https://every-layout.dev/) - An excellent course on layouts. Create responsive designs with fewer (or without) `@media` breakpoints. Although Spruce uses breakpoint, we try to reduce their uses as possible.
+- [SmolCSS](https://smolcss.dev/) - Minimal snippets for modern CSS layouts and components. A comprehensive collection of fantastic CSS solutions.
+- [Form Design Patterns](https://www.smashingmagazine.com/printed-books/form-design-patterns/) - Forms mean the interaction on any webpage or application. Making them suitable is crucial. Learn more from one of the best books on this topic.
+- [Modern CSS Solutions](https://moderncss.dev/) - An excellent list of modern CSS solutions.
+- [Accessibility for Everyone](https://abookapart.com/products/accessibility-for-everyone) - A light introduction about accessibility.
