--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -3,9 +3,11 @@ title: 'Variables'
 order: 9
 ---
 
-<p class="lead">Spruce comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
+<p class="lead">Spruce CSS comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
 
-Our central concept is not to expose a variable that isn’t needed for later customization, like the colors (for ```prefers-color-scheme```) or the transitions (for ```prefers-reduced-motion```).
+Our central concept is not to expose a CSS custom property that isn’t needed for later customization, like the colors (for `prefers-color-scheme`) or the transitions (for `prefers-reduced-motion`). Also, this is a framework for better customization Sass variables are needed (even if we generate CSS custom properties based on them). Like most things, this can change in the future depending on the use cases.
+
+More information about the [difference between Sass variables and CSS variables](https://css-tricks.com/difference-between-types-of-css-variables/).
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/variable/_index.scss)
 
@@ -22,9 +24,7 @@ There are two types of variables: single one and map. All of them are overwritea
     ),
     btn: (
       new-background: hsl(0, 0%, 95%), // Expanded new color values for buttons.
-      new-background-hover: hsl(0, 0%, 90%),
-      new-foreground: hsl(0, 0%, 10%),
-      new-foreground-hover: hsl(0, 0%, 10%),
+      new-foreground: hsl(0, 0%, 10%)
     )
   ),
   $font-size-base: 1.063rem,
@@ -32,61 +32,155 @@ There are two types of variables: single one and map. All of them are overwritea
   $container-width: 86rem
 );
 ```
+<Notification type="info">
+You must do the overwrite (of any of the variables or maps) at the first use of <code>@use</code> in your code — <a href="https://sass-lang.com/documentation/at-rules/use">more information about the newer imports in Sass</a>.
+</Notification>
 
-You must do the overwrite at the very first use of ```@use```.
+## Settings
 
-## CSS variables prefix
+Control the main settings of Spruce through the `$settings` map.
 
-Spruce use the prefix for generating the custom properties.
+You can access any setting with the [setting() helper function](/docs/sass/functions#setting). Next you can see the $settings object with its default values.
+
+Below, you can see the `$settings` object with its default values.
 
 ```scss
-$prefix: 'spruce';
+$settings: (
+  color-fallback: false,
+  hyphens:  true,
+  optimal-responsive-font-size: '2vw + 1rem',
+  prefix: 'spruce',
+  utilities: false
+);
 ```
 
+### color-fallback
+
+Setting the `color-fallback` key to true, you can turn the color fallback when using `spruce.color()` function.
+
+```scss
+// Without fallback
+body {
+  // color: spruce.color(text);
+  color: var(--spruce-base-color-text);
+}
+
+// With fallback
+body {
+  // color: spruce.color(text);
+  color: var(--spruce-base-color-text, #474d52);
+}
+```
+
+Turn on the color fallback:
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $settings: (
+    color-fallback: true
+  )
+);
+```
+
+### hyphens
+
+By default Spruce uses a simple hyphenation setup [which you can find here](https://github.com/conedevelopment/sprucecss/blob/main/scss/_typography.scss#L12).
+
+
+Turn off the hyphenation:
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $settings: (
+    hyphens: false
+  )
+);
+```
+
+### optimal-responsive-font-size
+
+Optimal size used at `font-size()` and `responsive-font-size()` function which is used in a `clamp()` function as the middle value.
+
+Using the mentioned functions, you can modify this value per call too. A global fallback is a much-needed thing here, but we need to fine-tune it uniquely in some cases (like bigger sizes).
+
+Modify the optimal font-size value:
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $settings: (
+    optimal-responsive-font-size: '5vw + 1'
+  )
+);
+```
+<Notification type="info">
+We added a simple formula: one with a relative viewport unit (vw) to make it responsive and one with a root-relative unit (to set up a minimum value, it never will be smaller than 1rem). You can specify any numerical value, but use quotations if you use an operation.
+</Notification>
+
+#### References
+- [font-size()](/docs/sass/functions/#font-size)
+- [responsive-font-size()](/docs/sass/functions/#responsive-font-size)
+- [clamp()](https://developer.mozilla.org/en-US/docs/Web/CSS/clamp())
+
+### prefix
+
+Spruce CSS uses this prefix for generating the custom properties.
+
+Modify the prefix value:
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $settings: (
+    prefix: 'my-custom-prefix'
+  )
+);
+```
 Generated CSS custom properties:
 
 ```css
 :root {
-  --spruce-base-color-primary-darkest: #18002e;
-  --spruce-base-color-heading: #18002e;
-  --spruce-base-color-primary: #8660cd;
-  --spruce-base-color-secondary: #ffc2cc;
+  --spruce-alert-color-danger: #db2929;
+  --spruce-alert-color-info: #00a1d6;
+  --spruce-alert-color-success: #00a854;
+  --spruce-alert-color-warning: #f2ca26;
 }
 ```
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/_root.scss)
 
-## Settings
+### utilities
 
-Control the main settings of Spruce through the ```$settings``` map.
+We use just a few classical utility classes. We don’t plan to add too much in the future, but it can change. If we create more, it sure will always be opt-in.
 
-You can access any setting with the [setting() helper function](/docs/sass/functions#setting).
+Right now, you can globally turn them on using this snippet:
 
 ```scss
-$settings:(
-  color-fallback: false, // Turn on/off the fallback color when using spruce.color() function
-  hyphens:  true, // Turn on/off the hyphenation
-  optimal-responsive-font-size: '2vw + 1rem' // Optimal size use at font-size() and responsive-font-size() function
+@use '~sprucecss/scss/spruce' with (
+  $settings: (
+    utilities: true
+  )
 );
 ```
 
 ## Colors
 
-We store the color values in a central map named ```$color```. It is a nested object separated by components.
+We store the color values in a central map named `$color`. It is a nested object separated by components.
 
 To eliminate the repetition, we use some helper variables for the more generic colors (which we use more than once). You can overwrite these directly to make the theming easier or from the object one by one.
 
 You can access any color with the [color() helper function](/docs/sass/functions#color).
 
 ```scss
-$color-primary: hsl(261, 52%, 59%) !default;
-$color-secondary: hsl(227, 92%, 55%) !default;
+$color-primary: hsl(261 52% 59%) !default;
+$color-secondary: hsl(227 92% 55%) !default;
 
-$color-black: hsl(205, 100%, 2%) !default;
-$color-white: hsl(0, 0%, 100%) !default;
+$color-black: hsl(205 100% 2%) !default;
+$color-white: hsl(0 0% 100%) !default;
 
-$color-gray-light: hsl(0, 0%, 90%) !default;
-$color-gray: hsl(208, 7%, 30%) !default;
+$color-gray-light: hsl(0 0% 90%) !default;
+$color-gray: hsl(208 7% 30%) !default;
+
+$color-danger: hsl(0 71% 51%) !default;
+$color-success: hsl(150 100% 33%) !default;
 
 $colors: () !default;
 $colors: map.deep-merge(
@@ -100,9 +194,9 @@ $colors: map.deep-merge(
       link: $color-primary,
       link-hover: color.scale($color-primary, $lightness: -20%),
       border: $color-gray-light,
-      mark-background: hsl(50, 100%, 80%),
+      mark-background: hsl(50 100% 80%),
       mark-foreground: $color-black,
-      code-background: hsl(261, 52%, 95%),
+      code-background: hsl(261 52% 95%),
       code-foreground: $color-black,
       blockquote-border: $color-primary
     ),
@@ -111,44 +205,101 @@ $colors: map.deep-merge(
       background: $color-primary
     ),
     alert: (
-      danger: hsl(2, 71%, 53%),
-      info: hsl(202, 100%, 37%),
-      success: hsl(160, 74%, 30%),
-      warning: hsl(40, 96%, 32%)
+      danger: $color-danger,
+      info: hsl(195 100% 42%),
+      success: $color-success,
+      warning: hsl(48 89% 55%)
     ),
     btn: (
       primary-background: $color-primary,
-      primary-background-hover: color.scale($color-primary, $lightness: -20%),
       primary-foreground: $color-white,
-      primary-foreground-hover: $color-white,
+      primary-shadow-focus: color.adjust($color-primary, $alpha: -0.75),
       secondary-background: $color-secondary,
-      secondary-background-hover: color.scale($color-secondary, $lightness: -20%),
       secondary-foreground: $color-white,
-      secondary-foreground-hover: $color-white
+      secondary-shadow-focus: color.adjust($color-secondary, $alpha: -0.75)
     ),
     form: (
       background: $color-white,
-      background-disabled: hsl(0, 0%, 95%),
+      background-disabled: hsl(0 0% 95%),
       border: $color-gray-light,
       border-disabled: $color-gray-light,
       border-focus: $color-primary,
+      shadow-focus: color.adjust($color-primary, $alpha: -0.75),
       check-foreground: $color-white,
       check-background: $color-primary,
+      invalid: $color-danger,
+      invalid-shadow: color.adjust($color-danger, $alpha: -0.75),
       label: $color-black,
       legend: $color-black,
-      placeholder: hsl(208, 7%, 40%),
+      placeholder: hsl(208 7% 40%),
       text: $color-gray,
-      select-foreground: $color-primary
+      select-foreground: $color-primary,
+      valid: $color-success,
+      valid-shadow: color.adjust($color-success, $alpha: -0.75)
     ),
     table: (
       border: $color-gray-light,
-      hover: hsla(0, 0%, 0%, 0.05),
-      stripe: hsla(0, 0%, 0%, 0.025)
+      caption: $color-gray,
+      heading: $color-black,
+      hover: hsl(0 0% 0% / 0.05),
+      text: $color-gray,
+      stripe: hsl(0 0% 0% / 0.025)
     )
   ),
   $colors
 );
 ```
+
+<Notification type="info">
+We declare the colors with the modern HSL syntax. The generated values are given and converted by Sass by default.
+</Notification>
+
+### Get Color Values
+
+Spruce generates prefixed CSS variables at `:root` by group from the nested map above.
+
+You can always access a generated variable by name, but it is easier to use the custom getter function named <a href="/docs/sass/functions/#color"><code>color()</code></a>.
+
+```scss
+a {
+  color: spruce.color(primary);
+}
+```
+
+### Overwrite, Add New Color
+
+Because the colors are in a Sass map, it is easy to overwrite them or add new values, blocks.
+
+
+```scss
+@use '../../scss/spruce' with (
+  $colors: (
+    base: (
+      primary: rgb(75 38% 110%),
+      tertiary: hsl(332 49% 29%)
+    ),
+    my-custom-component: (
+      background: hsl(0 0% 100%)
+    )
+  )
+);
+```
+
+### Dark Colors
+
+Spruce CSS supports dark-mode, which we mainly achieve through CSS Custom Properties. You can use the `$dark-colors` map to set up your dark colors.
+
+```scss
+$dark-colors: () !default;
+$dark-colors: map.deep-merge(
+  (),
+  $dark-colors
+);
+```
+
+<Notification type="info">
+The documentation of the dark mode is on its way and will be live in the next few weeks with version 0.4.
+</Notification>
 
 ## Spacers
 
