Variables: separate long declarations into subsections

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -386,12 +386,17 @@ $border-radius-lg: 0.5rem;
 
 You can access any font size with the [font-size() helper function](/docs/sass/functions#font-size).
 
+
+### Font Size
+
 ```scss
 $font-size-ratio: 1.333;
 
 $font-size-base: 1rem;
+
 $font-size-sm: 0.9rem;
 $font-size-lg: 1.1rem;
+
 $font-size-lead: math.pow($font-size-ratio, 1) * $font-size-base;
 
 $font-sizes: ();
@@ -406,82 +411,154 @@ $font-sizes: map.merge(
   ),
   $font-sizes
 );
+```
 
+### Font Family
+
+```scss
 $font-family-base: #{system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'};
 $font-family-heading: $font-family-base;
 $font-family-cursive: #{SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace};
+```
 
+### Heading
+
+```scss
 $heading-font-weight: 700;
+```
 
+### Line Height
+
+```scss
 $line-height-sm: 1.2;
 $line-height-md: 1.5;
 $line-height-lg: 1.8;
 $line-height-base: $line-height-lg;
 $line-height-heading: calc(2px + 2ex + 2px);
+```
 
+### Inline Elements
+
+```scss
 $inline-text-element-padding: 0.1em 0.3em;
 $inline-text-element-border-radius: $border-radius-sm;
 ```
 
 ## Buttons
 
+### Styles
+
 ```scss
-$btn-border-radius: $border-radius-sm !default;
+$btn-border-radius: $border-radius-sm;
 
-$btn-font-size: $font-size-base !default;
-$btn-font-size-sm: 0.8rem !default;
-$btn-font-size-lg: 1.15rem !default;
+$btn-font-family: null;
+$btn-font-style: null;
+$btn-font-weight: 500;
 
-$btn-font-family: null !default;
-$btn-font-style: null !default;
-$btn-font-weight: 500 !default;
+$btn-shadow-width: 0.25rem;
+```
 
-$btn-icon-padding: 0.75em !default;
-$btn-icon-padding-sm: 0.5em !default;
-$btn-icon-padding-lg: 0.9em !default;
+### Sizes
 
-$btn-padding: 0.75em 1em !default;
-$btn-padding-sm: 0.5em !default;
-$btn-padding-lg: 0.9em 1.15em !default;
+```scss
+$btn-font-size: $font-size-base;
+$btn-font-size-sm: 0.8rem;
+$btn-font-size-lg: 1.15rem;
 
-$btn-icon-size: 1em !default;
+$btn-icon-padding: 0.75em;
+$btn-icon-padding-sm: 0.5em;
+$btn-icon-padding-lg: 0.9em;
+
+$btn-padding: 0.75em 1em;
+$btn-padding-sm: 0.5em;
+$btn-padding-lg: 0.9em 1.15em;
+
+$btn-icon-size-sm: 0.85em;
+$btn-icon-size: 1em;
+
 ```
 
 ## Forms
 
+### Label
+
 ```scss
 $form-label-font-size: null;
+$form-label-font-size-sm: $font-size-sm;
+$form-label-font-size-lg: $font-size-lg;
+
 $form-label-font-style: null;
 $form-label-font-weight: null;
+```
+
+### Fieldset
+
+```scss
+$fieldset-gap-size: map.get($spacers, s);
 
 $legend-font-size: clamp(#{map.get($font-sizes, 'h5')}, 5vw, #{map.get($font-sizes, 'h4')});
 $legend-font-weight: 700;
+```
 
+### Description
+
+```scss
 $form-description-font-size: $font-size-base;
 $form-description-font-style: null;
 $form-description-font-weight: null;
+```
 
-$form-row-col-width: 20ch;
+### Control
 
+```scss
 $form-control-font-size: $font-size-base;
+$form-control-font-size-sm: $font-size-sm;
+$form-control-font-size-lg: $font-size-lg;
+
 $form-control-font-weight: null;
 $form-control-line-height: 1.5;
 $form-control-padding: 0.5em 0.75em;
 $form-control-padding-sm: 0.25em 0.5em;
 $form-control-padding-lg: 0.75em 1em;
+$form-control-border-width: 1px;
 $form-control-border-radius: $border-radius-sm;
+```
 
+### Check
+
+```scss
+$form-check-font-size: $font-size-base;
+$form-check-font-size-sm: $font-size-sm;
+$form-check-font-size-lg: $font-size-lg;
+$form-check-border-width: 1px;
+```
+
+### Select
+
+```scss
 $select-icon-width: 1.25em;
 $select-icon-right-offset: 0.5em;
 $select-padding-right: calc(0.75em + $select-icon-width);
-$select-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,12.692l-5.203,-5.203c-0.234,-0.234 -0.614,-0.234 -0.849,0l-1.272,1.273c-0.235,0.234 -0.235,0.614 -0,0.849l6.9,6.9c0.234,0.234 0.614,0.234 0.848,-0l6.9,-6.9c0.235,-0.235 0.235,-0.615 0,-0.849l-1.272,-1.273c-0.235,-0.234 -0.615,-0.234 -0.849,0l-5.203,5.203Z" style="fill:#{map.get($colors, form, select-foreground)};"/></svg>';
+```
 
-$form-radio-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="6" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
-$form-checkbox-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M9.525,13.777l-2.411,-2.412c-0.234,-0.233 -0.613,-0.233 -0.846,0l-1.27,1.27c-0.233,0.233 -0.233,0.612 0,0.846l4.104,4.103c0.116,0.117 0.269,0.175 0.422,0.175l0.003,0c0.152,0 0.305,-0.058 0.421,-0.175l9.054,-9.053c0.233,-0.234 0.233,-0.613 -0,-0.846l-1.27,-1.269c-0.233,-0.234 -0.612,-0.234 -0.846,-0l-7.361,7.361Z" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
-$form-checkbox-indeterminate-image: '<svg viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M19.5,11.1c-0,-0.331 -0.269,-0.6 -0.6,-0.6l-13.8,0c-0.331,0 -0.6,0.269 -0.6,0.6l0,1.8c0,0.331 0.269,0.6 0.6,0.6l13.8,0c0.331,0 0.6,-0.269 0.6,-0.6l-0,-1.8Z" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
+### Images
 
-$form-valid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm-1.476,10.182l-2.984,-2.984c-0.065,-0.065 -0.17,-0.065 -0.235,0l-0.943,0.943c-0.065,0.065 -0.065,0.171 -0,0.236l4.043,4.042c0.033,0.033 0.076,0.05 0.119,0.049c0.044,0.001 0.087,-0.016 0.12,-0.049l6.994,-6.994c0.065,-0.065 0.065,-0.17 0,-0.235l-0.943,-0.943c-0.065,-0.065 -0.17,-0.065 -0.235,-0l-5.936,5.935Z" style="fill:#{map.get($colors, alert, success)};"/></svg>';
-$form-invalid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm0.813,11.649c-0,-0.081 -0.065,-0.146 -0.146,-0.146l-1.334,0c-0.081,0 -0.146,0.065 -0.146,0.146l0,1.169c0,0.08 0.065,0.146 0.146,0.146l1.334,-0c0.081,-0 0.146,-0.066 0.146,-0.146l-0,-1.169Zm-0,-7.784c-0,-0.09 -0.073,-0.163 -0.163,-0.163l-1.3,0c-0.09,0 -0.163,0.073 -0.163,0.163l0,6.351c0,0.09 0.073,0.163 0.163,0.163l1.3,-0c0.09,-0 0.163,-0.073 0.163,-0.163l-0,-6.351Z" style="fill:#{map.get($colors, alert, danger)};"/></svg>';
+```scss
+$select-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,12.692l-5.203,-5.203c-0.234,-0.234 -0.614,-0.234 -0.849,0l-1.272,1.273c-0.235,0.234 -0.235,0.614 -0,0.849l6.9,6.9c0.234,0.234 0.614,0.234 0.848,-0l6.9,-6.9c0.235,-0.235 0.235,-0.615 0,-0.849l-1.272,-1.273c-0.235,-0.234 -0.615,-0.234 -0.849,0l-5.203,5.203Z" style="fill:#COLOR#;"/></svg>';
+
+$form-radio-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="6" style="fill:#COLOR#;"/></svg>';
+$form-checkbox-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M9.525,13.777l-2.411,-2.412c-0.234,-0.233 -0.613,-0.233 -0.846,0l-1.27,1.27c-0.233,0.233 -0.233,0.612 0,0.846l4.104,4.103c0.116,0.117 0.269,0.175 0.422,0.175l0.003,0c0.152,0 0.305,-0.058 0.421,-0.175l9.054,-9.053c0.233,-0.234 0.233,-0.613 -0,-0.846l-1.27,-1.269c-0.233,-0.234 -0.612,-0.234 -0.846,-0l-7.361,7.361Z" style="fill:#COLOR#;"/></svg>';
+$form-checkbox-indeterminate-image: '<svg viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M19.5,11.1c-0,-0.331 -0.269,-0.6 -0.6,-0.6l-13.8,0c-0.331,0 -0.6,0.269 -0.6,0.6l0,1.8c0,0.331 0.269,0.6 0.6,0.6l13.8,0c0.331,0 0.6,-0.269 0.6,-0.6l-0,-1.8Z" style="fill:#COLOR#;"/></svg>';
+
+$form-valid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm-1.476,10.182l-2.984,-2.984c-0.065,-0.065 -0.17,-0.065 -0.235,0l-0.943,0.943c-0.065,0.065 -0.065,0.171 -0,0.236l4.043,4.042c0.033,0.033 0.076,0.05 0.119,0.049c0.044,0.001 0.087,-0.016 0.12,-0.049l6.994,-6.994c0.065,-0.065 0.065,-0.17 0,-0.235l-0.943,-0.943c-0.065,-0.065 -0.17,-0.065 -0.235,-0l-5.936,5.935Z" style="fill:#COLOR#;"/></svg>';
+$form-invalid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm0.813,11.649c-0,-0.081 -0.065,-0.146 -0.146,-0.146l-1.334,0c-0.081,0 -0.146,0.065 -0.146,0.146l0,1.169c0,0.08 0.065,0.146 0.146,0.146l1.334,-0c0.081,-0 0.146,-0.066 0.146,-0.146l-0,-1.169Zm-0,-7.784c-0,-0.09 -0.073,-0.163 -0.163,-0.163l-1.3,0c-0.09,0 -0.163,0.073 -0.163,0.163l0,6.351c0,0.09 0.073,0.163 0.163,0.163l1.3,-0c0.09,-0 0.163,-0.073 0.163,-0.163l-0,-6.351Z" style="fill:#COLOR#;"/></svg>';
+```
+
+### Other
+
+```scss
+$form-row-col-width: 20ch;
+$form-input-shadow-width: 0.25rem;
 ```
 
 ## Tables
