--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -565,6 +565,8 @@ $form-input-shadow-width: 0.25rem;
 
 ```scss
 $table-responsive-width: 40rem;
+$table-padding: map.get($spacers, s);
+$table-padding-sm: map.get($spacers, xxs) map.get($spacers, xs);
 ```
 
 ## Layout
