Add missing functions

--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -131,3 +131,7 @@ Get a value by key name from the `$spacers` map.
   padding: spruce.spacer(xs) spruce.spacer(m);
 }
 ```
+
+## str-replace
+
+## svg-escape
