--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -200,7 +200,7 @@ select {
 
 The `form-check()` mixin is a helper to create custom checkboxes. It accepts three selectors and generates radio and checkbox styles.
 
-<Notification type="info">There are scenarios (unfortunately) where it is easier to modify the CSS code than the HTML markup. In our case, we usually style the checkboxes and radios in the <a href="https://hu.wordpress.org/plugins/contact-form-7/">Custom Form 7</a> plugin.</Nofitication>
+<Notification type="info">There are scenarios (unfortunately) where it is easier to modify the CSS code than the HTML markup. In our case, we usually style the checkboxes and radios in the <a href="https://hu.wordpress.org/plugins/contact-form-7/">Custom Form 7</a> plugin.</Notification>
 
 #### Argument(s)
 
@@ -223,7 +223,7 @@ The `form-check()` mixin is a helper to create custom checkboxes. It accepts thr
 
 ### layout-center
 
-With the help of the ```layout-center``` mixin, you can center any element.  It is most useful for the generic container element for the main layouts.
+With the help of the `layout-center` mixin, you can center any element.  It is most useful for the generic container element for the main layouts.
 
 #### Argument(s)
 
